--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ categories = ["data-structures"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["std", "assume_cell_layout"]
+default = ["std", "assume_cell_layout", "rc"]
 assume_cell_layout = []
 std = ["alloc"]
 alloc = []
+rc = ["alloc"]
 
 [dependencies]
