--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ description = "A `Cell<[T]>`-like mutable slice, that allows slice-like APIs."
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 categories = ["data-structures"]
-#repository = "https://github.com/zachs18/buffer-cell"
+keywords = ["cell", "no_std"]
+repository = "https://github.com/zachs18/slice-cell"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
